<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/exitIconButton"
        android:layout_width="56dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/difficultySelectionHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toEndOf="@+id/helpIconButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:srcCompat="@drawable/exiticon" />

    <ImageButton
        android:id="@+id/helpIconButton"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/difficultySelectionHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341"
        app:srcCompat="@drawable/helpicon" />

    <TextView
        android:id="@+id/difficultySelectionHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Your\nDifficulty Level"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:text="Easy"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultySelectionHeading" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:text="Medium"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hardButton"
        app:layout_constraintStart_toEndOf="@+id/easyButton"
        app:layout_constraintTop_toBottomOf="@+id/difficultySelectionHeading" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:text="Hard"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultySelectionHeading" />



</androidx.constraintlayout.widget.ConstraintLayout>