...
        android:textAlignment="center"
        android:textColor="#0E0606"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/returnHeading"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
...
        android:backgroundTint="#504E4E"
        android:text="YES"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/returnHeading"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="78dp"
...
