...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/playButton1"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_below="@+id/mainPage1Heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="#504E4E"
        android:rotationX="5"
        android:rotationY="0"
        android:text="PLAY"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
...
