...
    <EditText
        android:id="@+id/numSequence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/readyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memorizeSequenceHeading"
        app:layout_constraintVertical_bias="0.493" />

    <Button
        android:id="@+id/readyButton"
        android:layout_width="181dp"
        android:layout_height="74dp"
        android:text="READY"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memorizeSequenceHeading" />
...
